# fhir-core

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  README.rst  appveyor.yml  pyproject.toml  setup.cfg  setup.py
fhir_core/: constraints.py  fhirabstractmodel.py  types.py  utils.py  xml_utils.py  yaml_utils.py
tests/: fixtures.py  test_fhir_resource_issue_203.py  test_fhirabstractmodel.py  test_issues.py  test_issues_from_fhir_resources.py  test_types.py  test_utils.py  test_utils_xml.py  test_xml_utils.py  test_yaml_utils.py
tests/fixtures/: __init__.py
tests/fixtures/resources/: __init__.py  account.py  activitydefinition.py  address.py  age.py  annotation.py  backboneelement.py  base.py  codeableconcept.py  codesystem.py  coding.py  datatype.py  domainresource.py  element.py  extension.py  fhirprimitiveextension.py  fhirtypes.py  humanname.py  identifier.py  meta.py  narrative.py  period.py  quantity.py  reference.py  resource.py  timing.py
tests/fixtures/resources/R5/: age.py
tests/fixtures/static/: attachment-example.json
tests/static/json/examples/: activitydefinition-medicationorder-example(citalopramPrescription).json  activitydefinition-medicationorder-example.json  activitydefinition-medicationorder-example.yaml  patient-example.json  patient-issue-175-wrong-meta-value.json
tests/static/xml/exampels/: Device-NGS-device(NGS-device).xml  DocumentReference-CNVAnalysis_called(CNVAnalysis-called).xml  DocumentReference-WES_FullSequencedRegion_GRCh38(WES-FullSequencedRegion-GRCh38).xml  account-example(example).xml  (+699 more)
(+845 files in other folders)
